@@ -1,3 +1,8 @@
+Wed Jan 14 10:46:23 EST 2009
+
+- src/mutils.ml:remove_doubles: change structure of recursion
+- src/nevertofsm.ml:unfold_*: change structure of recursion
+
 Fri Dec 26 04:24:06 EST 2008  <baueran@gmail.com>
 
 - src/minimise.ml: make marked_states recursive
